--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <title>yunle-template-gulp</title>
     <link rel="stylesheet" href="/css/base.css?rev=@@hash">
-    <link rel="stylesheet" type="text/css" href="style/style-one.css?rev=@@hash">
+    <style>
+      h1{
+        background: #eee;
+      }
+    </style>
   </head>
   <body>
+    <!-- 这个是标题 -->
     <h1>yunle-template-gulp</h1>
     <p>
-      你可以更改测试下
+      你可以更改测试下s
+      <input id="" checked="true"/>
     </p>
     <input type="text" name="name" value="">
     <script type="text/javascript" src="/js/base.js?rev=@@hash"></script>
