修改gulpfile.js 加入libs库

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>yunle-template-gulp</title>
+    <link rel="stylesheet" href="/libs/css/normalize.css?rev=@@hash">
     <link rel="stylesheet" href="/css/base.css?rev=@@hash">
     <style>
       h1{
@@ -14,7 +15,7 @@
     <!-- 这个是标题 -->
     <h1>yunle-template-gulp</h1>
     <p>
-      你可以更改测试下s
+      你可以更改测试下
       <input id="" checked="true"/>
     </p>
     <input type="text" name="name" value="">
