加入小图打包base64

--- a/src/styles/less/base.less
+++ b/src/styles/less/base.less
@@ -1,6 +1,5 @@
 html,body{
   margin: 0;
   padding: 0;
-  box-shadow: 5px, 5px, 5px, #ccc;
-  // background: red;
+  background: url('../../images/user.gif') no-repeat center;
 }
